Fixed loading bug
Due to the menus being hidden by JavasSript, they would appear for a split second while opening the page and then disappear once the JavaScript was executed. Shifted the initial position to be handled by CSS instead of JS.

--- a/styles/main.css
+++ b/styles/main.css
@@ -652,6 +652,7 @@ body.dark .start-menu {
 }
 
 .utility-menu {
+  --position: -100%;
   width: 350px;
   height: 250px;
   border-radius: var(--panel-border-radius);
